# graphsignal-python

./: .gitignore  .gitmodules  Dockerfile.cupti  LICENSE.txt  MANIFEST.in  Makefile  NOTICE  README.md  SKILL.md  pyproject.toml  setup.py
.github/workflows/: daily-tests.yml  pypi-publish.yml
examples/flask/: generate_requests.py  mnist_app.py  mnist_train.py
examples/offline/: fraud_detection_job.py  fraud_detection_train.py  fraud_model.py  imdb_job.py  imdb_train.py
examples/rest_api/: mnist_client.py
graphsignal/: __init__.py  __main__.py  agent.py  agent_test.py  batches.py  batches_test.py  endpoint_trace.py  endpoint_trace_test.py  env_vars.py  graphsignal_async_test.py  graphsignal_test.py  inference_span.py  inference_span_test.py  logs.py  logs_test.py  metric_store.py  metric_store_test.py  metrics.py  metrics_pb2.py  metrics_test.py  predictions.py  profile_scheduler.py  profile_scheduler_test.py  profiles.py  profiles_pb2.py  profiling_span.py  profiling_span_test.py  profiling_step.py  profiling_step_test.py  proto_utils.py  proto_utils_test.py  sessions.py  sessions_test.py  span_context.py  span_context_test.py  span_counter.py  span_counter_test.py  span_scheduler.py  span_scheduler_test.py  spans.py  (+25 more)
graphsignal/_native/: __init__.py
graphsignal/bootstrap/: sitecustomize.py  utils.py
graphsignal/callbacks/: huggingface.py  huggingface_test.py  keras.py  keras_test.py  langchain.py  pytorch_lightning.py  pytorch_lightning_test.py  xgboost.py  xgboost_test.py
graphsignal/client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
graphsignal/commands/: graphsignal_run.py
graphsignal/core/: config_loader.py  sampler.py  signal_uploader.py  ticker.py
graphsignal/data/: __init__.py  base_data_profiler.py  builtin_types.py  builtin_types_test.py  data_profiler.py  missing_value_detector.py  missing_value_detector_test.py  numpy_ndarray.py  numpy_ndarray_test.py  tf_tensor.py  tf_tensor_test.py  torch_tensor.py  torch_tensor_test.py  utils.py
graphsignal/detectors/: __init__.py  latency_outlier_detector.py  latency_outlier_detector_test.py  missing_value_detector.py  missing_value_detector_test.py
graphsignal/otel/: otel_adapter.py  otel_collector.py  prometheus_adapter.py
graphsignal/profilers/: base_profiler.py  cupti_profiler.py  event_profiler.py  framework_profiler.py  function_profiler.py  generic.py  generic_test.py  huggingface.py  huggingface_generator_test.py  huggingface_pipeline_test.py  huggingface_subclass_test.py  huggingface_test.py  jax.py  jax_test.py  keras.py  keras_test.py  onnxruntime.py  onnxruntime_test.py  operation_profiler.py  profiler_utils.py  python.py  python_test.py  pytorch.py  pytorch_lightning.py  pytorch_lightning_test.py  pytorch_profiler.py  pytorch_profiler_test.py  pytorch_test.py  tensorflow.py  tensorflow_profiler.py  tensorflow_profiler_test.py  tensorflow_test.py  xgboost.py  xgboost_test.py
graphsignal/proto/: profiles_pb2.py  signals_pb2.py
graphsignal/recorders/: autogpt_recorder.py  autogpt_recorder_test.py  banana_recorder.py  banana_recorder_test.py  base_recorder.py  chroma_recorder.py  cprofile_recorder.py  cprofile_recorder_test.py  deepspeed_recorder.py  deepspeed_recorder_test.py  exception_recorder.py  huggingface_recorder.py  instrumentation.py  instrumentation_test.py  jax_recorder.py  jax_recorder_test.py  kineto_recorder.py  kineto_recorder_test.py  langchain_recorder.py  langchain_recorder_test.py  llama_index_recorder.py  nvml_recorder.py  nvml_recorder_test.py  onnxruntime_recorder.py  onnxruntime_recorder_test.py  openai_recorder.py  openai_recorder_test.py  otel_adapter.py  otel_collector.py  process_recorder.py  process_recorder_test.py  profiler_utils.py  prometheus_adapter.py  python_recorder.py  pytorch_recorder.py  pytorch_recorder_test.py  recorder_utils.py  recorder_utils_test.py  sglang_recorder.py  tensorflow_recorder.py  (+6 more)
graphsignal/samplers/: latency_outliers.py  latency_outliers_test.py  missing_values.py  missing_values_test.py  (+3 more)
scripts/: format-sources.sh  generate-docs.sh  install-packages.sh  publish.sh  run-tests-pyenv.sh  run-tests.sh
test/: http_server.py  model_utils.py  proto_utils.py  test_env_vars.py  test_graphsignal.py  test_graphsignal_async.py  test_logs.py  test_metrics.py  test_profiles.py  test_spans.py  test_tracer.py  test_uploader.py  test_utils.py
tools/: __init__.py  build-protobuf.sh  build_protobuf.py  format-sources.sh  init-novenv.sh  install-dev-packages.sh  install-packages.sh  publish.sh  run-tests-pyenv.sh  run-tests.sh  run-vllm-tests.sh  run_tests.py  update-client.sh  update_client.py  update_client.sh  upgrade-dev-packages.sh
(+137 files in other folders)
